<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="itacademy.snowadv.javaedu.ui.progress.ProgressFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_theory"
        android:name="itacademy.snowadv.javaedu.ui.theory.TheoryFragment"
        android:label="@string/title_theory"
        tools:layout="@layout/fragment_theory" />

    <fragment
        android:id="@+id/navigation_practice"
        android:name="itacademy.snowadv.javaedu.ui.practice.PracticeFragment"
        android:label="@string/title_practice"
        tools:layout="@layout/fragment_practice" />
</navigation>