<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fffafafa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.progress.ProgressFragment">

    <TextView
        android:id="@+id/cheer_text"
        android:text="Отдохните :)"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:textAlignment="viewStart"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/theory_read_progress_indicator"
        app:trackCornerRadius="3dp"
        app:trackThickness="8dp"
        app:trackColor="@color/cardview_dark_background"
        android:progressBackgroundTint="@color/black"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:progress="90"
        android:layout_margin="30dp"
        app:indicatorSize="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheer_text" />
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/tasks_done_progress_indicator"
        app:trackThickness="8dp"
        app:trackCornerRadius="3dp"
        app:trackColor="@color/cardview_dark_background"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:progress="90"
        android:layout_margin="30dp"
        app:indicatorSize="90dp"
        app:layout_constraintStart_toEndOf="@id/theory_read_progress_indicator"
        app:layout_constraintEnd_toStartOf="@id/daily_progress_indicator"
        app:layout_constraintTop_toBottomOf="@+id/cheer_text" />
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/daily_progress_indicator"
        app:trackThickness="8dp"
        app:trackCornerRadius="3dp"
        app:trackColor="@color/cardview_dark_background"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:progress="40"
        android:layout_margin="30dp"
        app:indicatorSize="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheer_text" />
    <TextView
        android:id="@+id/theory_read_progress_indicator_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:text="4/4"
        app:layout_constraintRight_toRightOf="@id/theory_read_progress_indicator"
        app:layout_constraintLeft_toLeftOf="@id/theory_read_progress_indicator"
        app:layout_constraintTop_toTopOf="@id/theory_read_progress_indicator"
        app:layout_constraintBottom_toBottomOf="@id/theory_read_progress_indicator"
        />
    <TextView
        android:id="@+id/theory_read_progress_indicator_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:text="@string/theory_read"
        android:textAlignment="center"
        android:textSize="17dp"
        app:layout_constraintRight_toRightOf="@id/theory_read_progress_indicator"
        app:layout_constraintLeft_toLeftOf="@id/theory_read_progress_indicator"
        app:layout_constraintTop_toBottomOf="@id/theory_read_progress_indicator"
        />
    <TextView
        android:id="@+id/tasks_done_progress_indicator_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:text="3/4"
        app:layout_constraintRight_toRightOf="@id/tasks_done_progress_indicator"
        app:layout_constraintLeft_toLeftOf="@id/tasks_done_progress_indicator"
        app:layout_constraintTop_toTopOf="@id/tasks_done_progress_indicator"
        app:layout_constraintBottom_toBottomOf="@id/tasks_done_progress_indicator"
        />
    <TextView
        android:id="@+id/tasks_done_progress_indicator_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:text="@string/tasks_done"
        android:textAlignment="center"
        android:textSize="17dp"
        app:layout_constraintRight_toRightOf="@id/tasks_done_progress_indicator"
        app:layout_constraintLeft_toLeftOf="@id/tasks_done_progress_indicator"
        app:layout_constraintTop_toBottomOf="@id/tasks_done_progress_indicator"
        />
    <TextView
        android:id="@+id/daily_progress_indicator_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:text="40%"
        app:layout_constraintRight_toRightOf="@id/daily_progress_indicator"
        app:layout_constraintLeft_toLeftOf="@id/daily_progress_indicator"
        app:layout_constraintTop_toTopOf="@id/daily_progress_indicator"
        app:layout_constraintBottom_toBottomOf="@id/daily_progress_indicator"
        />
    <TextView
        android:id="@+id/daily_progress_indicator_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:text="@string/daily_progress"
        android:textAlignment="center"
        android:textSize="17dp"
        app:layout_constraintRight_toRightOf="@id/daily_progress_indicator"
        app:layout_constraintLeft_toLeftOf="@id/daily_progress_indicator"
        app:layout_constraintTop_toBottomOf="@id/daily_progress_indicator"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tasks_done_progress_indicator_title"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:id="@+id/daily_goal"
            android:paddingTop="7sp"
            android:paddingStart="7sp"
            android:paddingEnd="7sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Цель: 10 заданий в день"
            android:textSize="20sp"
            style="@style/TextAppearance.MaterialComponents.Body1"/>

            <TextView
                android:id="@+id/difficulty_of_daily_goal"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="7sp"
                android:paddingTop="2sp"
                android:paddingEnd="7sp"
                android:text="Сложность: сложно"
                android:textSize="14sp" />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/daily_goal_seekbar"
                android:min="1"
                android:max="10"
                android:paddingBottom="5dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>